--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     }
 
     section {
-      padding: 30px 20px;
+      padding: 10px 20px;
       max-width: 900px;
-      margin: 0 auto 20px auto;
+      margin: 0 auto 10px auto;
       text-align: left;
     }
 
@@ -66,7 +66,7 @@
     .announcement-container {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: 10px;
       max-width: 700px;
       margin: 0 auto 40px auto;
     }
@@ -74,7 +74,7 @@
     .announcement-card {
       background: white;
       border-radius: 15px;
-      padding: 20px 30px;
+      padding: 30px 30px;
       box-shadow: 0 6px 15px rgba(0,0,0,0.1);
       font-size: 1.15em;
       color: #222;
@@ -90,14 +90,14 @@
     }
 
     .announcement-card p {
-      margin: 10px 0 5px 0;
+      margin: 12px 0 5px 0;
     }
 
     .announcement-card small {
       font-size: 0.9em;
       color: #888;
       position: absolute;
-      bottom: 15px;
+      bottom: 10px;
       right: 20px;
     }
 
@@ -209,7 +209,7 @@
         padding: 0 10px;
       }
       section {
-        padding: 30px 10px;
+        padding: 10px 10px;
       }
     }
   </style>
@@ -226,7 +226,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="Code n Curry logo" />
+    <img src="logo.png" alt="Code N Curry logo" />
     <h1>Code N Curry Restaurant</h1>
     <p>Where tech meets taste</p>
     <div id="countdown"></div>
@@ -242,24 +242,10 @@
         <p><strong>Valid for orders above ₹100</strong></p>
         <small>Valid till July 10, 2025</small>
       </div>
-
-      <!--
-      <div class="announcement-card">
-        <h3>🕒 New Timing</h3>
-        <p>We’re now open from 11:00 AM to 11:00 PM every day!</p>
-        <small>June 21, 2025</small>
-      </div>
-
-      <div class="announcement-card">
-        <h3>🍛 New Dish Alert</h3>
-        <p>Try our new Chicken Mughlai — rich, creamy & irresistible.</p>
-        <small>June 20, 2025</small>
-      </div>
-      -->
     </div>
   </section>
 
-  <section>
+  <section >
     <h2>Our Philosophy</h2>
     <p>At Code n Curry, we serve up fusion flavors with a techie twist. A hub for foodies and coders alike — expect bold curries, comfort bites, and a cozy digital vibe.</p>
   </section>
@@ -342,7 +328,13 @@
 
   <section>
     <h2>Stay Connected</h2>
-    <p>Address: Malayora Hwy, Near Vimal Jyothi Engineering College, Chemperi, Kannur</p>                     
+    <p>Address: Malayora Hwy, Near Vimal Jyothi Engineering College, Chemperi, Kannur</p>   
+    <p>
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons@15.2.0/icons/googlemaps.svg" alt="Instagram" class="social-icon" />
+
+      <a href="https://maps.app.goo.gl/fHViYG5Uw6gh5GnE8" target="_blank" rel="noopener noreferrer" class="button">Get Directions</a>                  
+
+    </p>
     <p>
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon" />
       <a href="https://instagram.com/codencurry" target="_blank" rel="noopener noreferrer">codencurry</a>
