--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
   <section >
     <h2>Our Philosophy</h2>
-    <p>At Code n Curry, we serve up fusion flavors with a techie twist. A hub for foodies and coders alike — expect bold curries, comfort bites, and a cozy digital vibe.</p>
+    <p>At Code N Curry, we serve up fusion flavors with a techie twist. A hub for foodies and coders alike — expect bold curries, comfort bites, and a cozy digital vibe.</p>
   </section>
 
   <section>
