--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+    <meta name ="og:type" content = "website" />
+  <meta name="og:title" content="Code N Curry Restaurant" />
+  <meta name="og:description" content="A Restaurant Where tech meets taste. A fusion of flavors for foodies and coders alike." />
+  <meta name="og:image" content="logo.png" />
+  <meta name="og:site_name" content="Code N Curry" />
+  <meta name="og:url" content="https://codencurry.in" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Code N Curry</title>
   <script type="application/ld+json">
