--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
     <h2>📢 Announcements</h2>
     <div class="announcement-container">
       <div class="announcement-card">
-        <h3>🎓 Student Special Offer</h3>
-        <p>10% OFF for Vimal Jyothi Engineering College students! Show your college ID at billing.</p>
+        <h3>🎓 Special Offer</h3>
+        <p>Follow on instagram get 5% discount</p>
         <p><strong>Valid for orders above ₹100</strong></p>
-        <small>Valid till July 10, 2025</small>
+        <small>Limited period offer</small>
       </div>
     </div>
   </section>
