--- a/index.html
+++ b/index.html
@@ -336,14 +336,16 @@
     <h2>Stay Connected</h2>
     <p>Address: Malayora Hwy, Near Vimal Jyothi Engineering College, Chemperi, Kannur</p>   
     <p>
-      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons@15.2.0/icons/googlemaps.svg" alt="Instagram" class="social-icon" />
-
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons@15.2.0/icons/googlemaps.svg" alt="Google Maps" class="social-icon" />
       <a href="https://maps.app.goo.gl/fHViYG5Uw6gh5GnE8" target="_blank" rel="noopener noreferrer" class="button">Get Directions</a>                  
-
     </p>
-    <p>
+    <p></p>
       <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" class="social-icon" />
       <a href="https://instagram.com/codencurry" target="_blank" rel="noopener noreferrer">codencurry</a>
+    </p>
+    <p>
+      <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" class="social-icon" />
+      <a href="tel:+919656553860">+91 9656553860</a>
     </p>
   </section>
 
