--- a/index.html
+++ b/index.html
@@ -242,11 +242,18 @@
   <section>
     <h2>📢 Announcements</h2>
     <div class="announcement-container">
-      <div class="announcement-card">
+      <div class="announcement-card" style="animation: pulse 1.5s infinite alternate;">
         <h3>🎓 Special Offer</h3>
         <p>Follow on instagram get 5% discount</p>
         <p><strong>Valid for orders above ₹100</strong></p>
         <small>Limited period offer</small>
+      </div>
+      <div class="announcement-card">
+        <h3>🆕 First Year VJEC Student Offer</h3>
+        <p>First year students of VJEC get 10% discount</p>
+        <p><strong>Valid for orders above ₹100 and more than one item</strong></p>
+        <small>Limited period offer.</small>
+      </div>
       </div>
     </div>
   </section>
