--- a/index.html
+++ b/index.html
@@ -372,6 +372,12 @@
     </form>
   </section>
 
+  <section>
+    <h2>Order Online</h2>
+    <p>Enjoy our delicious food from the comfort of your home!</p>
+    <a href="https://wa.me/919656553860?text=I%20want%20to%20order%20from%20Code%20N%20Curry" target="_blank" rel="noopener noreferrer" class="button">Order via WhatsApp</a>
+  </section>
+
   <footer>
     <p>&copy; 2025 Code N Curry. All rights reserved.</p>
   </footer>
