--- a/index.html
+++ b/index.html
@@ -138,10 +138,14 @@
 
     .coded-fries-img {
       width: 100%;
-      max-width: 600px;
+      max-width: 250px;
+      height: auto;
       border-radius: 15px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       margin-bottom: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .menu-item h3 {
@@ -237,6 +241,22 @@
         padding: 0px 10px;
       }
     }
+
+    .button.order-online-header {
+      margin-top: 15px;
+      display: inline-block;
+      background-color: #d9534f;
+      color: white;
+      padding: 10px 22px;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 1em;
+      font-family: inherit;
+      transition: background-color 0.3s ease;
+    }
+    .button.order-online-header:hover {
+      background-color: #c6453d;
+    }
   </style>
 
   <!-- Google tag (gtag.js) -->
@@ -254,6 +274,7 @@
     <img src="logo.png" alt="Code N Curry logo" />
     <h1>Code N Curry Restaurant</h1>
     <p>Where tech meets taste</p>
+    <a href="https://wa.me/919656553860?text=I%20want%20to%20order%20from%20Code%20N%20Curry" target="_blank" rel="noopener noreferrer" class="button order-online-header">Order Online</a>
     <div id="countdown"></div>
   </header>
 
