--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <img src="logo.png" alt="Code N Curry logo" />
     <h1>Code N Curry Restaurant</h1>
     <p>Where tech meets taste</p>
-    <a href="https://wa.me/919656553860?text=I%20want%20to%20order%20from%20Code%20N%20Curry" target="_blank" rel="noopener noreferrer" class="button order-online-header">Order Online</a>
+    <a href="https://wa.me/919656553860?text=I%20want%20to%20order%20from%20Code%20N%20Curry" target="_blank" rel="noopener noreferrer" class="button order-online-header">Order Now</a>
     <div id="countdown"></div>
   </header>
 
@@ -414,12 +414,6 @@
       <button type="submit">Send Message</button>
       <p id="status"></p>
     </form>
-  </section>
-
-  <section>
-    <h2>Order Online</h2>
-    <p>Enjoy our delicious food from the comfort of your home!</p>
-    <a href="https://wa.me/919656553860?text=I%20want%20to%20order%20from%20Code%20N%20Curry" target="_blank" rel="noopener noreferrer" class="button">Order via WhatsApp</a>
   </section>
 
   <footer>
