--- a/index.html
+++ b/index.html
@@ -292,11 +292,12 @@
   <section>
     <h2>🆕 Newly Added Dish: Coded Fries</h2>
     <div class="menu-item coded-fries-center">
-      <img src="coded-fries.jpg" alt="Coded Fries" class="coded-fries-img" />
-      <h3>🍟 Coded Fries</h3>
-      <p><strong>Tagline:</strong> Crispy. Coded. Craveable.</p>
-      <p>Golden crispy fries with tender chicken, drizzled with creamy sauces — the perfect fusion of crunch and flavor! A must-try innovation from <strong>Code N Curry</strong>.</p>
-      <p><strong>Price:</strong> <span class="old-price">₹200</span> ₹150</p>
+  <img src="coded-fries.jpg" alt="Coded Fries" class="coded-fries-img" />
+  <h3>🍟 Coded Fries</h3>
+  <p><strong>Tagline:</strong> Crispy. Coded. Craveable.</p>
+  <p>Golden crispy fries with tender chicken, drizzled with creamy sauces — the perfect fusion of crunch and flavor! A must-try innovation from <strong>Code N Curry</strong>.</p>
+  <p><strong>Price:</strong> <span class="old-price">₹200</span> ₹150</p>
+  <button class="add-btn">Add</button>
     </div>
   </section>
 
@@ -309,9 +310,10 @@
     <h2>Menu Sneak Peek</h2>
     <div class="menu-preview">
       <div class="menu-item">
-        <h3>🍗 Al Faham (Grilled Chicken)</h3>
-        <p>Flavors: BBQ, Butter, Honey, Honey Chilly, Kanthari, Normal, Pepper, Peri Peri, Spicy.</p>
-        <p><strong>Price:</strong> ₹120–₹150 (Quarter), ₹240–₹300 (Half), ₹450–₹520 (Full)</p>
+  <h3>🍗 Al Faham (Grilled Chicken)</h3>
+  <p>Flavors: BBQ, Butter, Honey, Honey Chilly, Kanthari, Normal, Pepper, Peri Peri, Spicy.</p>
+  <p><strong>Price:</strong> ₹120–₹150 (Quarter), ₹240–₹300 (Half), ₹450–₹520 (Full)</p>
+  <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -319,6 +321,7 @@
         <ul>
           <li>Chicken Biriyani – ₹100 / ₹140</li>
         </ul>
+        <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -326,12 +329,14 @@
         <ul>
           <li>Chicken / Egg / Mixed / Schezwan / Veg – ₹100–₹160</li>
         </ul>
+        <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
-        <h3>🍽️ Mandhi (Alfaham Mandhi)</h3>
-        <p>Mandhi rice with grilled Alfaham in all your favorite flavors.</p>
-        <p><strong>Price:</strong> ₹200–₹880</p>
+  <h3>🍽️ Mandhi (Alfaham Mandhi)</h3>
+  <p>Mandhi rice with grilled Alfaham in all your favorite flavors.</p>
+  <p><strong>Price:</strong> ₹200–₹880</p>
+  <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -340,6 +345,7 @@
           <li>Arabic, Rumali, Meat, Full Meat – Plate or Roll</li>
           <li>₹80 – ₹150 | Extra Cheese ₹20</li>
         </ul>
+        <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -349,6 +355,7 @@
           <li>Beef: Fry, Curry, Roast, Chilly</li>
           <li>₹80 – ₹500</li>
         </ul>
+        <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -356,6 +363,7 @@
         <ul>
           <li>Chana, Egg, Gobi, Paneer, Tomato, Mix Veg – ₹30–₹450</li>
         </ul>
+        <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -363,6 +371,7 @@
         <ul>
           <li>Fruit Juices, Milkshakes & Mojitos – ₹20–₹90</li>
         </ul>
+        <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -370,6 +379,7 @@
         <ul>
           <li>Tea, Coffee, Horlicks, Boost – ₹8–₹20</li>
         </ul>
+        <button class="add-btn">Add</button>
       </div>
 
       <div class="menu-item">
@@ -377,6 +387,24 @@
         <ul>
           <li>Kothu Porotta</li>
         </ul>
+        <button class="add-btn">Add</button>
+  <style>
+    .add-btn {
+      background-color: #d9534f;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      padding: 8px 18px;
+      font-size: 1em;
+      margin-top: 8px;
+      cursor: pointer;
+      transition: background 0.2s;
+      display: inline-block;
+    }
+    .add-btn:hover {
+      background-color: #c6453d;
+    }
+  </style>
       </div>
     </div>
   </section>
