--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Retired</title>
+  <meta name="description" content="This business is retired.">
+  <style>
+    :root{
+      --bg:#0f1724; /* deep navy */
+      --card:#0b1220;
+      --text:#e6eef8;
+      --muted:#98a4b5;
+      --accent:#7dd3fc;
+      --radius:14px;
+      color-scheme: dark;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: radial-gradient(1200px 600px at 10% 10%, rgba(125,211,252,0.04), transparent),
+                  radial-gradient(900px 400px at 90% 90%, rgba(124,58,237,0.03), transparent),
+                  var(--bg);
+      color:var(--text);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:32px;
+    }
+    .card{
+      width:100%;
+      max-width:920px;
+      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      border-radius:var(--radius);
+      padding:48px;
+      box-shadow: 0 10px 30px rgba(2,6,23,0.6), inset 0 1px 0 rgba(255,255,255,0.02);
+      text-align:center;
+    }
+    h1{
+      margin:0 0 12px 0;
+      font-size:clamp(36px, 6vw, 72px);
+      letter-spacing:-0.02em;
+      line-height:1;
+    }
+    p.lead{
+      margin:0 0 20px 0;
+      color:var(--muted);
+      font-size:18px;
+    }
+    .small{
+      font-size:13px;
+      color:var(--muted);
+    }
+    .badge{
+      display:inline-block;
+      margin-top:20px;
+      padding:10px 16px;
+      border-radius:999px;
+      background:linear-gradient(90deg, rgba(125,211,252,0.08), rgba(124,58,237,0.04));
+      color:var(--accent);
+      font-weight:600;
+      letter-spacing:0.02em;
+    }
+    @media (prefers-color-scheme: light){
+      :root{ --bg:#f6f9fc; --card:#ffffff; --text:#071125; --muted:#475569; --accent:#0ea5e9; color-scheme: light; }
+      body{background:linear-gradient(180deg,#f8fbff,#ffffff)}
+      .card{box-shadow: 0 8px 24px rgba(16,24,40,0.06)}
+    }
+  </style>
+</head>
+<body>
+  <main class="card" role="main" aria-labelledby="retired-heading">
+    <h1 id="retired-heading">Retired</h1>
+  </main>
+</body>
+</html>
 
